build: updated to support pm-specific outputs
Outputs to specifically confifured dev (./build) & prod (./dist) builds

Also
  - Rewrote partials to support the build vs prod outputs, and
    reconfigured a bit for PM-projects specifically
  - updated the `deploy` shell script
    - removed WebDAV endpoint so it isn't in plain text anymore. My
      solution is to use a shell variable instead, e.g.:
        .zshrc: export WEBDAV=<the-webdav-endpoint>
        usage: ./deploy.sh local/path $WEBDAV/project/path
  - removed license stuff since this will be used for private repos

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,2 +1,7 @@
+// Tokens & Mixins
 @import 'variables';
-@import 'planter';
+@import 'typography';
+@import 'grid';
+
+// Specific Project Styles
+@import 'custom';
