chore: added production script deps to dev template

--- a/src/views/partials/template-dev.hbs
+++ b/src/views/partials/template-dev.hbs
@@ -9,6 +9,9 @@
   <link href="{{@root.assets.css}}" rel="stylesheet">
   <title>{{@root.site.title}}</title>
 </head>
+{{!-- Dependencies --}}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
 <body>
   {{#block "body"}}
