updated to include more pm-specific project stuff

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,3 +18,7 @@ $font-family-secondary:     "Palatino LT Std", Palatino, Georgia, "Times New Rom
 $font-family-base:          $font-family-primary;
 $font-color-base:           $color-gray;
 $font-color-secondary:      $color-navy;
+
+
+$base: 1rem;
+$spacer: .875rem;
