--- a/src/styles/modules/collections/_copy.scss
+++ b/src/styles/modules/collections/_copy.scss
@@ -44,7 +44,7 @@
   }
   .quote {
     @include font-palatino;
-    font-weight: 700;
+    // font-weight: 700;
     font-size: 1.5rem;
     font-style: italic;
     text-align: center;
