--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,9 +1,3 @@
 {{#extend "page" }}{{#content "content"}}
-<div class="page">
-  <div class="demo">
-    <img class="logo" src="{{@root.assets.static}}/planter-logo.svg" alt="logo">
-    <h1>Welcome to Planter {{@root.planter.version}}</h1>
-    <p>A web project starter for folks who hate setting up projects.</p>
-  </div>
-</div>
+<div>Planter PMv2</div>
 {{/content}}{{/extend}}
