implemented inline css in build output with smoosher

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,3 +1,10 @@
 {{#extend "page" }}{{#content "content"}}
+
+<!-- smoosh -->
+<link rel="stylesheet" href="style.css">
+<!-- endsmoosh -->
+
 <div>Planter PMv2</div>
+
+
 {{/content}}{{/extend}}
