--- a/src/views/partials/templates/template-dev.hbs
+++ b/src/views/partials/templates/template-dev.hbs
@@ -16,7 +16,7 @@
 <body>
   {{#block "body"}}
   {{/block}}
-  <script type="text/javascript" src="{{@root.assets.js}}"></script>
+  {{!-- <script type="text/javascript" src="{{@root.assets.js}}"></script> --}}
 </body>
 
 </html>
