--- a/src/views/partials/templates/template-prod.hbs
+++ b/src/views/partials/templates/template-prod.hbs
@@ -1,4 +1,4 @@
-<link href="{{@root.assets.css}}?$staticlink$" rel="stylesheet">
+{{!-- <link href="{{@root.assets.css}}?$staticlink$" rel="stylesheet"> --}}
 {{#block "body"}}
 {{/block}}
-<script type="text/javascript" src="{{@root.assets.js}}?$staticlink$"></script>
+{{!-- <script type="text/javascript" src="{{@root.assets.js}}?$staticlink$"></script> --}}
