tweak setup for content assets (more)

--- a/src/views/partials/templates/template-prod.hbs
+++ b/src/views/partials/templates/template-prod.hbs
@@ -1,4 +1,5 @@
 {{!-- <link href="{{@root.assets.css}}?$staticlink$" rel="stylesheet"> --}}
+{{> inject-css }}
 {{#block "body"}}
 {{/block}}
 {{!-- <script type="text/javascript" src="{{@root.assets.js}}?$staticlink$"></script> --}}
